gerencia-de-config/APIs para exercícios/api-python/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-python-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-python
  template:
    metadata:
      labels:
        app: api-python
    spec:
      containers:
        - name: api-python
          image: api-python:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
