gerencia-de-config/APIs para exercícios/api-python/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-python-ingress
spec:
  rules:
    - host: api-python.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-python-service
                port:
                  number: 80
